# digitize

./: .gitignore  AGENT_GUIDE.md  README.md  pyproject.toml
examples/: run_demo.py
src/digitize/: __init__.py  calibrate.py  cli.py  color.py  config.py  fit.py  imaging.py  overlay.py  schemas.py  session.py  ticks.py  transform.py  util.py  verify.py
src/digitize/extract/: __init__.py  bar.py  boxplot.py  common.py  dense.py  errorbar.py  forest.py  heatmap.py  km.py  line.py  scatter.py
tests/: synth.py  test_dense.py  test_features.py  test_pipeline.py
